cs225/mp5/compiling_error.txt
In file included from /Users/Jacob/ECE/cs225/mp5/quadtree.cpp:6:
In file included from /Users/Jacob/ECE/cs225/mp5/quadtree.h:10:
/Users/Jacob/ECE/cs225/mp5/png.h:17:10: error: 'png.h' file not found with <angled> include; use "quotes" instead
#include <png.h>
         ^~~~~~~
         "png.h"
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:271:26: error: too many arguments to function call, expected 0, have 1
  root = clockwiseRotate(root);
         ~~~~~~~~~~~~~~~ ^~~~
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:268:1: note: 'clockwiseRotate' declared here
void Quadtree::clockwiseRotate(){
^
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:275:1: error: unknown type name 'QuadtreeNode'; did you mean 'Quadtree'?
QuadtreeNode * Quadtree::clockwiseRotate(QuadtreeNode * subtree){
^~~~~~~~~~~~
Quadtree
/Users/Jacob/ECE/cs225/mp5/quadtree.h:15:7: note: 'Quadtree' declared here
class Quadtree
      ^
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:275:26: error: out-of-line definition of 'clockwiseRotate' does not match any declaration in 'Quadtree'
QuadtreeNode * Quadtree::clockwiseRotate(QuadtreeNode * subtree){
                         ^~~~~~~~~~~~~~~
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:287:39: error: too many arguments to function call, expected 0, have 1
    tempnw->nwChild = clockwiseRotate(tempnw);
                      ~~~~~~~~~~~~~~~ ^~~~~~
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:268:1: note: 'clockwiseRotate' declared here
void Quadtree::clockwiseRotate(){
^
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:289:39: error: too many arguments to function call, expected 0, have 1
    tempne->neChild = clockwiseRotate(tempne);
                      ~~~~~~~~~~~~~~~ ^~~~~~
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:268:1: note: 'clockwiseRotate' declared here
void Quadtree::clockwiseRotate(){
^
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:291:39: error: too many arguments to function call, expected 0, have 1
    tempsw->swChild = clockwiseRotate(tempsw);
                      ~~~~~~~~~~~~~~~ ^~~~~~
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:268:1: note: 'clockwiseRotate' declared here
void Quadtree::clockwiseRotate(){
^
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:293:39: error: too many arguments to function call, expected 0, have 1
    tempse->seChild = clockwiseRotate(tempse);
                      ~~~~~~~~~~~~~~~ ^~~~~~
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:268:1: note: 'clockwiseRotate' declared here
void Quadtree::clockwiseRotate(){
^
/Users/Jacob/ECE/cs225/mp5/quadtree.cpp:294:11: error: cannot initialize return object of type 'Quadtree *' with an lvalue of type 'Quadtree::QuadtreeNode *'
   return subtree;
          ^~~~~~~
9 errors generated.
